@@ -1,5 +1,7 @@
 1999-11-16  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
+	* doc/rglclock.xml: Modified.
+
 	* README: Modified.
 
 	* NEWS: Modified.
